# hexlet_pytest

./: Makefile  README.md  pyproject.toml
.github/workflows/: show-directory.yml
hexlet_pytest/: example.py
tests/: test_example.py
tests/fixtures/: fin.txt  start.txt
